SONARJAVA-6926 Fix FP for S9352: handle Map<String, T> autowiring
Spring fills a Map dependency bean by bean only when its raw type is exactly
java.util.Map and its keys are bean names, the values then being the beans of
the map's value type. Record such an injection point against that value type
and flag it as multi-bean, as already done for collections and arrays.

A map keyed by anything else resolves to a single bean, and so does a raw
collection or map, whose element type Spring cannot resolve either.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>